# rust-kalshi

./: .openapi-generator-ignore  Cargo.toml  README.md  openapi.json
.openapi-generator/: FILES
docs/: AmendOrderRequest.md  AmendOrderResponse.md  Announcement.md  AuthApi.md  BatchCancelOrdersIndividualResponse.md  BatchCancelOrdersRequest.md  BatchCancelOrdersResponse.md  BatchCreateOrdersIndividualResponse.md  BatchCreateOrdersRequest.md  BatchCreateOrdersResponse.md  BidAskDistribution.md  CancelOrderResponse.md  CreateOrderRequest.md  CreateOrderResponse.md  DailySchedule.md  DecreaseOrderRequest.md  DecreaseOrderResponse.md  EventData.md  EventPosition.md  ExchangeApi.md  ExchangeStatus.md  Fill.md  GetBalanceResponse.md  GetEventResponse.md  GetEventsResponse.md  GetExchangeAnnouncementsResponse.md  GetExchangeScheduleResponse.md  GetFillsResponse.md  GetMarketCandlesticksResponse.md  GetMarketOrderbookResponse.md  GetMarketResponse.md  GetMarketsResponse.md  GetOrderResponse.md  GetOrdersResponse.md  GetPortfolioSettlementsResponse.md  GetPositionsResponse.md  GetSeriesResponse.md  GetUserRestingOrderTotalValueResponse.md  JsonError.md  LoginRequest.md  (+18 more)
src/: lib.rs
src/apis/: auth_api.rs  configuration.rs  exchange_api.rs  market_api.rs  mod.rs  portfolio_api.rs
src/client/: mod.rs
src/models/: amend_order_request.rs  amend_order_response.rs  announcement.rs  batch_cancel_orders_individual_response.rs  batch_cancel_orders_request.rs  batch_cancel_orders_response.rs  batch_create_orders_individual_response.rs  batch_create_orders_request.rs  event_data.rs  (+46 more)
